@@ -3,7 +3,7 @@
 # (c) 2002/2003/2009/2010 by Matthias Arndt <marndt@asmsoftware.de> / ASM Software
 #
 # File: Makefile
-# last Modified: 13.06.2010 : 18:03
+# last Modified: 26.06.2010 : 23:03
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -66,6 +66,9 @@ SFont.o: SFont.c SFont.h
 # default make rule for .c files - compile to .o
 .c.o: datatypes.h
 	$(CC) $(CFLAGS) -c $<
+
+# tasks without a generated result
+.PHONY: clean
 
 # cleanup
 clean:
