@@ -1,5 +1,6 @@
 25.06.2010:
 	- made selection of SDL_Surface type more flexible: USE_HARDWARESURFACE
+	- added PHONY targets to the Makefiles
 
 12.06.2010:
 	- dropped highscore checksumming
